add_executable(serialization_variable serialization_variable.cpp )
target_link_libraries(serialization_variable)

add_executable(serialization_containter serialization_container.cpp )
target_link_libraries(serialization_containter)

add_executable(serialization_raw serialization_raw.cpp )
target_link_libraries(serialization_raw ${PREFIX_LIB}core)
